@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+22-Feb-2003
+~~~~~~~~~~~
+Make Size toolbar icon only set the size. Use a second button to set automatic
+mode.
+
 13-Feb-2003
 ~~~~~~~~~~~
 Updated Spanish translation (Marcelo Ramos).
